<resources>
    <string name="app_name">Car Loan Calculator</string>
    <string name="car_price">Car Price</string>
    <string name="down_payment">Down Payment</string>
    <string name="load_period">Load Period</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="loan">Loan:</string>
    <string name="interest">Interest:</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="input_error">Value Required</string>
</resources>
